--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>springcloud-eureka-7003</module>
         <module>springcloud-consumer-hystrix-dashboard</module>
         <module>springcloud-zuul</module>
+        <module>springcloud-config-server-3344</module>
+        <module>springcloud-config-client-3355</module>
     </modules>
 
     <!--打包方式  pom-->
