--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,14 @@
     <modules>
         <module>springcloud-01-api</module>
         <module>springcloud-provider-dept-8001</module>
+        <module>springcloud-config-provider-dept-8001</module>
         <module>springcloud-provider-dept-hystrix-8001</module>
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
         <module>springcloud-consumer-dept-80</module>
         <module>springcloud-consumer-feign</module>
         <module>springcloud-eureka-7001</module>
+        <module>springcloud-config-eureka-7001</module>
         <module>springcloud-eureka-7002</module>
         <module>springcloud-eureka-7003</module>
         <module>springcloud-consumer-hystrix-dashboard</module>
